Again fixed google auth

--- a/database/node_auth.env
+++ b/database/node_auth.env
@@ -1,3 +1,4 @@
 PORT=3000
 GOOGLE_CLIENT_ID=786749570807-nrnumq0522rluff7t2cucdghfqvnkge0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
